# aeropress_gui

./: .gitignore  AeroPress_4Vector_企劃書_v5_10_口感校正提案.md  AeroPress_4Vector_企劃書_v5_8s.md  AeroPress_4Vector_企劃書_v5_9_封閉前漏水增補.md  AeroPress_4Vector_焙度對照表.md  AeroPress_4Vector_白皮書.md  CLAUDE.md  README.md  constants.py  diagnose_anchor.py  main.py  optimizer.py  pyproject.toml  runtime.py  webapp.py
.claude/: settings.local.json
aeropress_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: water_presets.py
models/: compounds.py  ey_model.py  scoring.py  tds_model.py
output/: export.py  radar.py  terminal.py
static/css/: webapp.css
static/js/: webapp.js
templates/: index.html
tests/: test_models.py  test_output_and_cli.py  test_water_presets.py  test_webapp.py
