[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeropress-optimizer"
version = "0.1.0"
description = "AeroPress 四向量最佳化系統"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
